<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:shuame="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent">
    <include layout="@layout/view_titlebar"/>
    <ScrollView android:scrollbars="none" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
        <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/treaty_descr_content_padding_left_right" android:paddingTop="@dimen/treaty_descr_content_padding_top_bottom" android:paddingRight="@dimen/treaty_descr_content_padding_left_right" android:paddingBottom="@dimen/treaty_descr_content_padding_top_bottom" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:text="@string/treaty_descr_title_0" style="@style/treaty_title"/>
            <TextView android:text="@string/treaty_descr_detail_0" style="@style/treaty_msg"/>
            <TextView android:text="@string/treaty_descr_title_1" style="@style/treaty_title"/>
            <TextView android:text="@string/treaty_descr_detail_1" style="@style/treaty_msg"/>
            <TextView android:text="@string/treaty_descr_title_2" style="@style/treaty_title"/>
            <TextView android:text="@string/treaty_descr_detail_2" style="@style/treaty_msg"/>
            <TextView android:text="@string/treaty_descr_title_3" style="@style/treaty_title"/>
            <TextView android:text="@string/treaty_descr_detail_3" style="@style/treaty_msg"/>
            <TextView android:text="@string/treaty_descr_title_4" style="@style/treaty_title"/>
            <TextView android:text="@string/treaty_descr_detail_4" style="@style/treaty_msg"/>
            <TextView android:text="@string/treaty_descr_title_5" style="@style/treaty_title"/>
            <TextView android:text="@string/treaty_descr_detail_5" style="@style/treaty_msg"/>
            <TextView android:text="@string/treaty_descr_title_6" style="@style/treaty_title"/>
            <TextView android:text="@string/treaty_descr_detail_6" style="@style/treaty_msg"/>
            <TextView android:text="@string/treaty_descr_title_7" style="@style/treaty_title"/>
            <TextView android:text="@string/treaty_descr_detail_7" style="@style/treaty_msg"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
