<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:shuame="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@color/global_new_background_bg" android:layout_width="match_parent" android:layout_height="match_parent">
    <include layout="@layout/view_titlebar"/>
    <ImageView android:paddingTop="30dp" android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/root_done_fail_ico" android:layout_weight="1" android:contentDescription="@string/string_content_description"/>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1.3">
        <TextView android:textSize="@dimen/sp_18" android:textColor="@color/textcolor_dark_black" android:gravity="center_horizontal" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/root_done_fail_remind_text_1"/>
        <TextView android:textSize="@dimen/sp_18" android:textColor="@color/textcolor_dark_black" android:gravity="center_horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/root_done_fail_remind_text_1"/>
        <LinearLayout android:gravity="bottom|center_vertical|center_horizontal|center" android:orientation="horizontal" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/sp_16" android:textColor="@color/textcolor_dark_gray2" android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/root_done_fail_remind_text_2"/>
            <TextView android:textSize="@dimen/sp_18" android:textColor="@color/textcolor_dark_black" android:gravity="center_horizontal" android:id="@+id/tv_percent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/string_percent_sign_init_value"/>
            <TextView android:textSize="@dimen/sp_18" android:textColor="@color/textcolor_dark_black" android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/string_percent_sign"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:paddingLeft="15dp" android:paddingRight="15dp" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1.1">
        <Button android:textSize="@dimen/sp_18" android:textColor="@color/white" android:id="@+id/btn_join_pc_root" android:background="@drawable/selector_new_def_fill_button" android:layout_width="match_parent" android:layout_height="@dimen/homepage_login_btn_height" android:text="@string/root_done_fail_join_pc_button_text"/>
        <Button android:textSize="@dimen/sp_18" android:textColor="#ff1fbf69" android:id="@+id/btn_continue_root" android:background="@drawable/selector_new_def_stroke_button" android:layout_width="match_parent" android:layout_height="@dimen/homepage_login_btn_height" android:layout_marginTop="15dp" android:text="@string/root_done_fail_continue_button_text"/>
    </LinearLayout>
</LinearLayout>
