<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:shuame="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@color/global_new_background_bg" android:layout_width="match_parent" android:layout_height="match_parent">
    <include layout="@layout/view_not_titlebar"/>
    <ImageView android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/root_remove_succ_img" android:layout_weight="1" android:contentDescription="@string/string_content_description"/>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="@dimen/circle_block_below_text_margin_top" android:layout_weight="1.3">
        <TextView android:textSize="@dimen/sp_18" android:textColor="@color/textcolor_dark_black" android:gravity="center_horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/root_remove_succ_remid_text_1"/>
        <TextView android:textSize="@dimen/sp_15" android:textColor="@color/textcolor_dark_gray2" android:gravity="center_horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:text="@string/root_remove_succ_remid_text_2"/>
    </LinearLayout>
    <RelativeLayout android:paddingLeft="15dp" android:paddingRight="15dp" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1.1">
        <Button android:textSize="@dimen/sp_18" android:textColor="@color/white" android:id="@+id/btn_done" android:background="@drawable/selector_new_def_fill_button" android:layout_width="match_parent" android:layout_height="@dimen/homepage_login_btn_height" android:layout_marginBottom="20dp" android:text="@string/string_done" android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</LinearLayout>
